# VFlib

./: ANNOUNCE-ja.txt  ANNOUNCE.txt  CHANGES  DISTRIB.txt  INSTALL  Makefile.in  README.md  VFlib-3.7.2-1-templ.spec  VFlib3-config.in  aclocal.m4  configure  configure-site  configure.in  libtool  make-sub.in  recmkdir
OLD/: VFlib.c.orig  VFsys.h.orig  bdf.c.orig  bitmap.c.orig  bm2ol.c.orig  bmlist.c.orig  cache.c.orig  ccv.c.orig  configure.in-orig  consts.h.orig  drv_bdf.c.orig  drv_jg.c.orig  drv_jtex.c.orig  drv_pk.c.orig  drv_t1.c.orig  drv_ttf.c-new  drv_ttf.c-xxx  drv_ttf.c.orig  drv_zeit.c.orig  fileman.c.orig  fsearch.c.orig  fsearch.h.orig  image.c.orig  mem.c.orig  metric.c.orig  params.c.orig  path.c.orig  raster.c.orig  sexp.c.orig  str.c.orig  vflibcap.c.orig  vflmklib.c.orig  vflmkt1.c.orig  vflmkttf.c.orig  vfltest.c.orig
OLD/xxx-X11/: .#x11.mk.in  Imakefile  runxmkmf  x11.mk.in  x11.mk.in.~1~
ascii-jtex/: 00_README  Makefile.in  fontsc.lst  fontsc.tex  inst.sh  instc.sh  mkfonts.sh  mkfontsc.sh  mksample.sh  sample.dvi  sample.tex
ascii-jtex/Adj/: 00README  asiya24.adj  dfgotp5.adj  dfhsmw3.adj  dfkaimd.adj  dfmrmw3.adj  ekanji.adj  empty.adj  f5ajchm6.adj  hgrhg9sj.adj  ipag.adj  ipam.adj  jg.adj  jiskan16.adj  jiskan24.adj  mincho.adj  mojik.adj  mojkv.adj  none.adj  sazanami-gothic.adj  sazanami-mincho.adj  sazanami.adj  tasiya24.adj  tdfhsmw7.adj  tdfkaimd.adj  tdfmin3_u.adj  tekanji.adj  tempty.adj  tf5ajchm3.adj  thgrhm3sj.adj  tipag.adj  tipam.adj  tjg.adj  tjiskan16.adj  tjiskan24.adj  tk14.adj  tmincho.adj  tnone.adj  tsazanami-gothic.adj  tsazanami-mincho.adj
ascii-jtex/Fonts/: JT1gop.fd  JT1gyo.fd  JT1hag.fd  JT1hkg.fd  JT1hsg.fd  JT1hsm.fd  JT1ill.fd  JT1kai.fd  JT1kyk.fd  JT1mik.fd  JT1mip.fd  JY1gop.fd  JY1gyo.fd  JY1hag.fd  JY1hkg.fd  JY1hsg.fd  JY1hsm.fd  JY1ill.fd  JY1kai.fd  JY1kyk.fd  JY1mik.fd  JY1mip.fd  jt1gyo.sty  jt1hag.sty  jt1hkg.sty  jt1hsg.sty  jt1hsm.sty  jt1kai.sty  jt1kyk.sty  jt1mik.sty  jy1gyo.sty  jy1hag.sty  jy1hkg.sty  jy1hsg.sty  jy1hsm.sty  jy1kai.sty  jy1kyk.sty  jy1mik.sty
ascii-jtex/HojoKanji/: 00README  JT2gt.fd  JT2mc.fd  JY2gt.fd  JY2mc.fd  Makefile  gothh10.tfm  gothh5.tfm  gothh6.tfm  gothh7.tfm  gothh8.tfm  gothh9.tfm  hojo.pl  hojot.pl  jisx0212.sty  jt2gt.sty  jt2mc.sty  jy2gt.sty  jy2mc.sty  minh10.tfm  minh5.tfm  minh6.tfm  minh7.tfm  minh8.tfm  minh9.tfm  mkhojo.sh  sample.dvi  sample.tex  tgothh10.tfm  tgothh5.tfm  tgothh6.tfm  tgothh7.tfm  tgothh8.tfm  tgothh9.tfm  tminh10.tfm  tminh5.tfm  tminh6.tfm  tminh7.tfm  tminh8.tfm  tminh9.tfm
ascii-jtex/Mojikyo/: 00_README  Makefile  mkmjkjfm.sh  mksample.c  samplep.dvi  samplep.tex  samplet.dvi  samplet.tex  test1-v.dvi  test1-v.tex  test1.dvi  test1.tex
ascii-jtex/Test/: illust.dvi  illust.tex  vflibcap-jtex
ascii-jtex/eKanji/: Makefile  README  ekanji.sty  jt1ekan.fd  jy1ekan.fd  mksample.c  sample.dvi  sample.tex
ascii-jtex/eKanji/tfm/: ekan.pl  ekan1002.tfm  mktfm  tekan.pl  tekan2002.tfm
ascii-jtex/eKanji/tools/: Makefile  ekdump.c  ekreenc.c
autom4te.cache/: output.0  requests  traces.0
ccv/: Makefile.in  big5_unicode.ccv  cns11643-1_unicode.ccv  cns11643-2_unicode.ccv  gb12345_unicode.ccv  gb2312_unicode.ccv  iso8859-10_unicode.ccv  iso8859-13_unicode.ccv  iso8859-14_unicode.ccv  iso8859-15_unicode.ccv  iso8859-1_unicode.ccv  iso8859-2_unicode.ccv  iso8859-3_unicode.ccv  iso8859-4_unicode.ccv  iso8859-5_koi8-r.ccv  iso8859-5_unicode.ccv  iso8859-6_unicode.ccv  iso8859-7_unicode.ccv  iso8859-8_unicode.ccv  iso8859-9_unicode.ccv  jisx0201_unicode.ccv  jisx0208_unicode.ccv  jisx0208sjis_unicode.ccv  jisx0208sjis_unicode_2.ccv  jisx0212_unicode.ccv  koi8-r_iso8859-5.ccv  koi8-r_unicode.ccv  ksc5601_unicode.ccv  ksx1001_unicode.ccv  mk-ccv-1  mk-ccv-2  mk-ccv-cns1  mk-ccv-cns2  mkall  mkcscv.c
ccv/TBL/JSHIN/: 00_README
ccv/TBL/RFC/: mk-koi8.sh
ccv/TBL/UNICODE/: 00_README  README.TXT
doc/: Makefile.in  VFlib-37.dvi  VFlib-37.html  VFlib-37.info  VFlib-37.ps  VFlib-37.texi
doc/Paper1/: Makefile  cah-gut.cls  comic-jp.eps  internal.eps  vflib35.bib  vflib35.ps  vflib35.tex  xmdvi-image-bw.eps
doc/Paper2-ja/: 00_README  00_README-ja  Makefile  sect.sty  vflib-ja.bib  vflib-ja.dvi  vflib-ja.ps  vflib-ja.tex
src/: Makefile.in  VFlib-3_7.h.in  VFlib.c  VFsys.h  bdf.c  bdf.h  bijfmtest.c  bitmap.c  bitmap.h  bm2ol.c  bmlist.c  bmlist.h  cache.c  cache.h  ccv.c  ccv.h  comic.h  config.h.in  consts.h  dbg-bml.c  dbg.c  dbg_ml  dbg_ml.c  defaults.c  drv_bdf.c  drv_comic.c  drv_ekan.c  drv_gf.c  drv_ini.c  drv_jg.c  drv_jtex.c  drv_mojikmap.c  drv_otf.c  drv_pk.c  drv_t1.c  drv_tfm.c  drv_try.c  drv_ttf.c  drv_vf.c  drv_zeit.c  (+78 more)
src/FontDrv/: FontDrv.vcproj
src/Test/: bbx1a  bbx1b  bbx1c  bdf-1a  bdf-1b  bdf-1c  bdf-2a  bdf-2b  comic-1a  ekanji-1a  ekanji-1b  ekanji-2a  ekanji-2b  jg-1a  jg-1b  jtex-1a  jtex-1b  jtex-1c  jtex-1d  jtex-1e  jtex-1f  jtex-1g  jtex-1h  jtex-2a  otf-1a  pk-1a  prof1  ptex-1a  ptex-1b  test-1a  test-1b  test-1c  test-1d  tex  tex-1a  tex-1b  tex-1c  tex-1d  tex-nd  tfm-1a  (+19 more)
src/VFLMakeTTF/: VFLMakeTTF.vcproj
src/VFLMisc/: VFLMisc.vcproj
src/VFLTest/: VFLTest.vcproj
src/VFLib/: VFLib.vcproj
t1lib/: 8a.enc  8r.enc  DC.enc  EC.enc  Makefile.in  ad.enc  asex.enc  asexp.enc  cork.enc  dc.enc  dvips.enc  extex.enc  funky.enc  mkt1enc.sh  odvips.enc  texmext.enc  texmital.enc  texmsym.enc  xl2.enc  xt2.enc
utils/: Makefile.in
utils/ctext2pgm-1.5.3/: 00_README  HELLO  Makefile.in  ctext2pgm.c  ctext2pgm.h  fontdef.h  vflibcap-ctext2pgm
utils/ctext2pgm-1.5.3/Samples/: Makefile  index-ja.shtml  index.shtml  make-sub  (+1 more)
utils/hyaku-1.1.0/: 00_README  COPY  Makefile.in  hyaku.txt  hyakubm.c  hyakubm.h  index.html  mkgif  mkhdr.c
utils/vfl2bdf-2.0.0/: Makefile.in  Readme.txt  sample.sh  vfl2bdf.c
utils/vflx11-2.0.2/: Imakefile.in  Makefile.in  vflx11.c
vflibcaps/: Makefile  vflibcap  vflibcap-bdf  vflibcap-ekanji  vflibcap-jg  vflibcap-jtex  vflibcap-ml  vflibcap-pcf  vflibcap-tex  vflibcap-tex-ja-pcf  vflibcap-tex-ja-ttf  vflibcap-tex-pk  vflibcap-tex-pk-ja-pcf  vflibcap-ttf  vflibcap-type1  vflibcap-zeit
(+56 files in other folders)
